...
            imageCell.kf.cancelDownloadTask()
        }
    
    func setIsLiked(_ isLiked: Bool) {
        if isLiked {
            likeButton.setImage(UIImage.activeLike, for: .normal)
            likeButton.accessibilityIdentifier = "like button on"
        }
        else {
            likeButton.setImage(UIImage.noActiveLike, for: .normal)
            likeButton.accessibilityIdentifier = "like button off"
        }
    }
    
}


...
